Final changes to test